Todo count functional

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 			<div class="col-xs-4">
 				<form onsubmit="app.controllers.todoController.addTodoFromForm(event)">
 					<input type="text" name="description" placeholder="Todo Description">
-					<button type="submit">Add Todo</button>
+					<button type="submit">Add Todo</button><span>  Todos Count: </span><span id="todo-count"></span>
 				</form>
 				<div id="todo-list">
 				</div>
