--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 			<div class="col-xs-4">
 			</div>
 			<div class="col-xs-4">
-				<div id="time">
+				<div id="clock">
 				</div>
 			</div>
 			<div class="col-xs-4">
@@ -39,6 +39,7 @@
 			</div>
 			<div class="col-xs-4">
 				<div id="quote">
+					
 				</div>
 			</div>
 			<div class="col-xs-4">
