--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,11 @@
 <body>
 	<div class="container-fluid">
 		<div class="row one">
-			<div class="col-xs-10">
+			<div class="col-xs-3">
 			</div>
-			<div class="col-xs-2">
+			<div id="greeting" class="col-xs-6">
+			</div>
+			<div class="col-xs-3">
 				<div id="weather">
 				</div>
 			</div>
@@ -39,7 +41,7 @@
 			</div>
 			<div class="col-xs-4">
 				<div id="quote">
-					
+
 				</div>
 			</div>
 			<div class="col-xs-4">
